--- a/DMX512_analyzator/MainWindow.xaml
+++ b/DMX512_analyzator/MainWindow.xaml
@@ -7,20 +7,21 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button x:Name="buttonStart" Content="Start" HorizontalAlignment="Left" Height="29" Margin="691,13,0,0" VerticalAlignment="Top" Width="99" Click="buttonStart_Click"/>
-        <Button x:Name="buttonStop" Content="Stop" HorizontalAlignment="Left" Height="29" Margin="691,47,0,0" VerticalAlignment="Top" Width="99" Click="buttonStop_Click"/>
+        <Button x:Name="buttonStart" Content="Start" HorizontalAlignment="Left" Height="29" Margin="691,13,0,0" VerticalAlignment="Top" Width="99" Click="ButtonStart_Click"/>
+        <Button x:Name="buttonStop" Content="Stop" HorizontalAlignment="Left" Height="29" Margin="691,47,0,0" VerticalAlignment="Top" Width="99" Click="ButtonStop_Click"/>
         <RadioButton Content="Dekadicky" HorizontalAlignment="Left" Margin="691,125,0,0" VerticalAlignment="Top"/>
         <RadioButton Content="Hexadecimálně" HorizontalAlignment="Left" Margin="691,85,0,0" VerticalAlignment="Top"/>
         <RadioButton Content="Binárně" HorizontalAlignment="Left" Margin="691,105,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="textBox0" HorizontalAlignment="Left" Margin="10,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21"/>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="72,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21"/>
-        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Margin="134,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21"/>
-        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Margin="196,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21"/>
-        <TextBox x:Name="textBox4" HorizontalAlignment="Left" Margin="258,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21"/>
-        <TextBox x:Name="textBox5" HorizontalAlignment="Left" Margin="320,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21"/>
-        <TextBox x:Name="textBox6" HorizontalAlignment="Left" Margin="382,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21"/>
-        <TextBox x:Name="textBox7" HorizontalAlignment="Left" Margin="444,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21"/>
-        <TextBox x:Name="textBox8" HorizontalAlignment="Left" Margin="506,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="72,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
+        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Margin="134,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
+        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Margin="196,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
+        <TextBox x:Name="textBox4" HorizontalAlignment="Left" Margin="258,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
+        <TextBox x:Name="textBox5" HorizontalAlignment="Left" Margin="320,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
+        <TextBox x:Name="textBox6" HorizontalAlignment="Left" Margin="382,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
+        <TextBox x:Name="textBox7" HorizontalAlignment="Left" Margin="444,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
+        <TextBox x:Name="textBox8" HorizontalAlignment="Left" Margin="506,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
+        <Button x:Name="test" Content="Button" HorizontalAlignment="Left" Margin="720,191,0,0" VerticalAlignment="Top" Click="test_Click"/>
 
     </Grid>
 </Window>
