--- a/DMX512_analyzator/MainWindow.xaml
+++ b/DMX512_analyzator/MainWindow.xaml
@@ -9,9 +9,9 @@
     <Grid x:Name="mainGrid">
         <Button x:Name="buttonStart" Content="Start" HorizontalAlignment="Left" Height="29" Margin="691,13,0,0" VerticalAlignment="Top" Width="99" Click="ButtonStart_Click"/>
         <Button x:Name="buttonStop" Content="Stop" HorizontalAlignment="Left" Height="29" Margin="691,47,0,0" VerticalAlignment="Top" Width="99" Click="ButtonStop_Click"/>
-        <RadioButton Content="Dekadicky" HorizontalAlignment="Left" Margin="691,125,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Hexadecimálně" HorizontalAlignment="Left" Margin="691,85,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Binárně" HorizontalAlignment="Left" Margin="691,105,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="radioDec" Content="Dekadicky" HorizontalAlignment="Left" Margin="691,125,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="radioHex" Content="Hexadecimálně" HorizontalAlignment="Left" Margin="691,85,0,0" VerticalAlignment="Top" IsChecked="True"/>
+        <RadioButton x:Name="radioBin" Content="Binárně" HorizontalAlignment="Left" Margin="691,105,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="textBox0" HorizontalAlignment="Left" Margin="10,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
         <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="72,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
         <TextBox x:Name="textBox2" HorizontalAlignment="Left" Margin="134,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
@@ -21,7 +21,7 @@
         <TextBox x:Name="textBox6" HorizontalAlignment="Left" Margin="382,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
         <TextBox x:Name="textBox7" HorizontalAlignment="Left" Margin="444,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
         <TextBox x:Name="textBox8" HorizontalAlignment="Left" Margin="506,13,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="21" TextChanged="text_changed"/>
-        <Button x:Name="test" Content="Button" HorizontalAlignment="Left" Margin="720,191,0,0" VerticalAlignment="Top" Click="test_Click"/>
+        <Button x:Name="testBtn" Content="Barva" HorizontalAlignment="Left" Margin="691,185,0,0" VerticalAlignment="Top" Click="test_Click" Height="48" Width="99"/>
         <TextBox x:Name="textBox9" HorizontalAlignment="Left" Margin="72,40,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="22" TextChanged="text_changed"/>
         <TextBox x:Name="textBox10" HorizontalAlignment="Left" Margin="134,40,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="22" TextChanged="text_changed"/>
         <TextBox x:Name="textBox11" HorizontalAlignment="Left" Margin="196,40,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="22" TextChanged="text_changed"/>
@@ -46,6 +46,7 @@
         <TextBox x:Name="textBox30" HorizontalAlignment="Left" Margin="382,98,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="22" TextChanged="text_changed"/>
         <TextBox x:Name="textBox31" HorizontalAlignment="Left" Margin="444,98,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="22" TextChanged="text_changed"/>
         <TextBox x:Name="textBox32" HorizontalAlignment="Left" Margin="506,98,0,0" TextWrapping="Wrap" Text="00" VerticalAlignment="Top" Width="57" Height="22" TextChanged="text_changed"/>
+        <Frame x:Name="mainFrame" Content="Frame" Margin="0,249,10,0" NavigationUIVisibility="Hidden"/>
 
     </Grid>
 </Window>
