--- a/DMX512_analyzator/ListBoxPage.xaml
+++ b/DMX512_analyzator/ListBoxPage.xaml
@@ -11,6 +11,7 @@
     <Grid>
         <ScrollBar x:Name="ScrollBarA" HorizontalAlignment="Left" Margin="428,47,0,0" VerticalAlignment="Top" Maximum="513" SmallChange="1" ValueChanged="ScrollBar_ValueChanged" KeyUp="ScrollBarA_KeyUp" KeyDown="ScrollBarA_KeyDown"/>
         <TextBox x:Name="textBoxA" HorizontalAlignment="Left" Margin="308,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="textBoxA_TextChanged" Text="0"/>
-        <TextBox HorizontalAlignment="Left" Margin="490,55,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="textBoxB" HorizontalAlignment="Left" Margin="490,55,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="727,36,0,0" VerticalAlignment="Top" Click="Button_Click"/>
     </Grid>
 </Page>
