--- a/DMX512_analyzator/ListBoxPage.xaml
+++ b/DMX512_analyzator/ListBoxPage.xaml
@@ -9,9 +9,11 @@
       Title="ListBoxPage">
 
     <Grid>
-        <ScrollBar x:Name="ScrollBarA" HorizontalAlignment="Left" Margin="428,47,0,0" VerticalAlignment="Top" Maximum="513" SmallChange="1" ValueChanged="ScrollBar_ValueChanged" KeyUp="ScrollBarA_KeyUp" KeyDown="ScrollBarA_KeyDown"/>
-        <TextBox x:Name="textBoxA" HorizontalAlignment="Left" Margin="308,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="textBoxA_TextChanged" Text="0"/>
-        <TextBox x:Name="textBoxB" HorizontalAlignment="Left" Margin="490,55,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="727,36,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <ScrollBar x:Name="ScrollBarA" HorizontalAlignment="Left" Margin="168,56,0,0" VerticalAlignment="Top" Maximum="513" SmallChange="1" ValueChanged="ScrollBar_ValueChanged" KeyUp="ScrollBarA_KeyUp" KeyDown="ScrollBarA_KeyDown"/>
+        <TextBox x:Name="textBoxA" HorizontalAlignment="Left" Margin="48,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="textBoxA_TextChanged" Text="0" Height="33"/>
+        <TextBox x:Name="textBoxB" HorizontalAlignment="Left" Margin="259,56,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" Height="33"/>
+        <Button Content="Potvrdit" HorizontalAlignment="Left" Margin="424,63,0,0" VerticalAlignment="Top" Click="Button_Click" Width="61"/>
+        <Label Content="Číslo kanálu" HorizontalAlignment="Left" Margin="48,30,0,0" VerticalAlignment="Top"/>
+        <Label Content="Hodnota" HorizontalAlignment="Left" Margin="259,30,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Page>
