--- a/DMX512_analyzator/MainWindow.xaml
+++ b/DMX512_analyzator/MainWindow.xaml
@@ -5,25 +5,47 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DMX512_analyzator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="809">
-    <Grid x:Name="mainGrid" Margin="0,0,0,23">
-        <Button x:Name="buttonStart" Content="Start" HorizontalAlignment="Left" Height="29" Margin="684,20,0,0" VerticalAlignment="Top" Width="99" Click="ButtonStart_Click"/>
-        <Button x:Name="buttonStop" Content="Stop" HorizontalAlignment="Left" Height="29" Margin="684,54,0,0" VerticalAlignment="Top" Width="99" Click="ButtonStop_Click" IsEnabled="False"/>
-        <RadioButton x:Name="radioDec" Content="Dekadicky" HorizontalAlignment="Left" Margin="684,132,0,0" VerticalAlignment="Top" Checked="radioDec_Checked"/>
-        <RadioButton x:Name="radioHex" Content="Hexadecimálně" HorizontalAlignment="Left" Margin="684,92,0,0" VerticalAlignment="Top" IsChecked="True" Checked="RadioHex_Checked"/>
-        <RadioButton x:Name="radioBin" Content="Binárně" HorizontalAlignment="Left" Margin="684,112,0,0" VerticalAlignment="Top" Checked="radioBin_Checked"/>
-        <Button x:Name="testBtn" Content="Barva" HorizontalAlignment="Left" Margin="684,242,0,0" VerticalAlignment="Top" Click="test_Click" Height="48" Width="99"/>
-        <Frame x:Name="mainFrame" Content="" Margin="0,10,114,140" NavigationUIVisibility="Hidden"/>
-        <Menu Margin="0,0,0,370">
+        Title="Analyzátor DMX512" Height="450" Width="720" Icon="/audio-input-xlr-icon.png" MinHeight="450" MinWidth="720" MaxWidth="0" MaxHeight="0">
+    <Grid x:Name="mainGrid" Margin="0,0,0,22" Height="412" MinWidth="720" MinHeight="412" MaxWidth="720" MaxHeight="412">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="13*"/>
+            <ColumnDefinition Width="333*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="buttonStart" Content="Start" HorizontalAlignment="Left" Height="29" Margin="568,20,0,0" VerticalAlignment="Top" Width="99" Click="ButtonStart_Click" Grid.Column="1"/>
+        <Button x:Name="buttonStop" Content="Stop" HorizontalAlignment="Left" Height="29" Margin="568,54,0,0" VerticalAlignment="Top" Width="99" Click="ButtonStop_Click" IsEnabled="False" Grid.Column="1"/>
+
+        <Frame x:Name="mainFrame" Content="" Margin="0,18,136,132" NavigationUIVisibility="Hidden" Grid.ColumnSpan="2"/>
+        <Menu VerticalAlignment = "Top" Grid.ColumnSpan="2" Height="18">
             <MenuItem Header="Rozložení">
                 <MenuItem Header="Matice kanálů" Click="ChangeToTextBoxPage"/>
                 <MenuItem Header="Jednotlivý kanál" Click="ChangeToListBoxPage"/>
                 <MenuItem Header="Šavle"/>
             </MenuItem>
         </Menu>
-        <Label Content="Port:" HorizontalAlignment="Left" Margin="679,163,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="portBox" HorizontalAlignment="Left" Margin="713,163,0,0" VerticalAlignment="Top" Width="83" SelectionChanged="portBox_SelectionChanged"/>
-        <Button x:Name="refreshButton" Content="Obnovit" HorizontalAlignment="Left" Margin="692,10,0,0" Width="92" Click="refreshButton_Click" VerticalAlignment="Center"/>
+        <GroupBox Grid.Column="1" Header="Formátování" Margin="563,88,12,257">
+            <StackPanel>
+                <RadioButton HorizontalAlignment="Left" x:Name="radioHex" Content="Hexadecimálně" IsChecked="True" Checked="RadioHex_Checked" Height="15" Width="100"/>
+                <RadioButton HorizontalAlignment="Left" x:Name="radioBin" Content="Binárně" Checked="radioBin_Checked" Height="15" Width="59"/>
+                <RadioButton HorizontalAlignment="Left" x:Name="radioDec" Content="Dekadicky" Checked="radioDec_Checked" Height="15" Width="73"/>
+            </StackPanel>
+        </GroupBox>
+        <GroupBox Grid.Column="1" Header="Port:" Margin="563,160,12,171">
+            
+                <StackPanel Height="69">
+                   <!-- <Label Content="Port:" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="34"/>-->
+                <ComboBox Margin="0,2,0,0" HorizontalAlignment="Center" x:Name="portBox" Width="87" SelectionChanged="portBox_SelectionChanged" Height="22"/>
+                <Button Margin="0,10,0,0" HorizontalAlignment="Center" x:Name="refreshButton" Content="Obnovit" Width="92" Click="refreshButton_Click" Height="20" ToolTip="Znovu načte zařízení v seznamu portů."/>
+                </StackPanel>
+            
+        </GroupBox>
+        <GroupBox Grid.Column="1" Header="Funkce" Margin="555,246,4,91">
+            <StackPanel>
+                <RadioButton Margin="0,2,0,0" HorizontalAlignment="Left" x:Name="radioReceive" Content="Příjem signálu" IsChecked="True"  Height="15" Width="100" Checked="radioRecieve_Checked"/>
+                <RadioButton  HorizontalAlignment="Left" x:Name="radioSend" Content="Odesílání signálu"  Height="15" Width="120" Checked="radioSend_Checked"/>
+            
+            <RadioButton HorizontalAlignment="Left" x:Name="radioEdit" Content="Editace signálu" Height="15" Width="100" IsEnabled="False"/>
+            </StackPanel>
+        </GroupBox>
 
     </Grid>
 </Window>
