--- a/DMX512_analyzator/ListBoxPage.xaml
+++ b/DMX512_analyzator/ListBoxPage.xaml
@@ -9,11 +9,11 @@
       Title="ListBoxPage">
 
     <Grid>
-        <ScrollBar x:Name="ScrollBarA" HorizontalAlignment="Left" Margin="168,56,0,0" VerticalAlignment="Top" Maximum="513" SmallChange="1" ValueChanged="ScrollBar_ValueChanged"/>
-        <TextBox x:Name="textBoxA" HorizontalAlignment="Left" Margin="48,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="textBoxA_TextChanged" Text="0" Height="33"/>
-        <TextBox x:Name="textBoxB" HorizontalAlignment="Left" Margin="259,56,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" Height="33"/>
-        <Button Content="Potvrdit" HorizontalAlignment="Left" Margin="424,63,0,0" VerticalAlignment="Top" Click="Button_Click" Width="61"/>
-        <Label Content="Číslo kanálu" HorizontalAlignment="Left" Margin="48,30,0,0" VerticalAlignment="Top"/>
-        <Label Content="Hodnota" HorizontalAlignment="Left" Margin="259,30,0,0" VerticalAlignment="Top"/>
+        <ScrollBar x:Name="ScrollBarA" HorizontalAlignment="Left" Margin="256,94,0,0" VerticalAlignment="Top" Maximum="512" SmallChange="1" ValueChanged="ScrollBar_ValueChanged"/>
+        <TextBox x:Name="textBoxA" HorizontalAlignment="Left" Margin="136,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="textBoxA_TextChanged" Text="0" Height="34"/>
+        <TextBox x:Name="textBoxB" HorizontalAlignment="Left" Margin="296,94,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" Height="34"/>
+        <Button x:Name="ConfirmButton" Content="Potvrdit odesílání" HorizontalAlignment="Left" Margin="296,140,0,0" VerticalAlignment="Top" Click="Button_Click" Width="120" Height="20"/>
+        <Label Content="Číslo kanálu" HorizontalAlignment="Left" Margin="132,74,0,0" VerticalAlignment="Top"/>
+        <Label Content="Hodnota" HorizontalAlignment="Left" Margin="292,74,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Page>
