--- a/DMX512_analyzator/MainWindow.xaml
+++ b/DMX512_analyzator/MainWindow.xaml
@@ -5,47 +5,53 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DMX512_analyzator"
         mc:Ignorable="d"
-        Title="Analyzátor DMX512" Height="450" Width="720" Icon="/audio-input-xlr-icon.png" MinHeight="450" MinWidth="720" MaxWidth="0" MaxHeight="0">
+        Title="Analyzátor DMX512" Height="383" Width="740" Icon="/audio-input-xlr-icon.png" MinHeight="450" MinWidth="720" MaxWidth="740" MaxHeight="0">
     <Grid x:Name="mainGrid" Margin="0,0,0,22" Height="412" MinWidth="720" MinHeight="412" MaxWidth="720" MaxHeight="412">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="13*"/>
-            <ColumnDefinition Width="333*"/>
+            <ColumnDefinition Width="27*"/>
+            <ColumnDefinition Width="487*"/>
+            <ColumnDefinition Width="206*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="buttonStart" Content="Start" HorizontalAlignment="Left" Height="29" Margin="568,20,0,0" VerticalAlignment="Top" Width="99" Click="ButtonStart_Click" Grid.Column="1"/>
-        <Button x:Name="buttonStop" Content="Stop" HorizontalAlignment="Left" Height="29" Margin="568,54,0,0" VerticalAlignment="Top" Width="99" Click="ButtonStop_Click" IsEnabled="False" Grid.Column="1"/>
+        <Button x:Name="buttonStart" Content="Start" HorizontalAlignment="Left" Height="28" Margin="75,26,0,0" VerticalAlignment="Top" Width="121" Click="ButtonStart_Click" Grid.Column="2" ToolTip="Zahájí zvolenou funkci na vybraném portu."/>
+        <Button x:Name="buttonStop" Content="Stop" HorizontalAlignment="Left" Height="28" Margin="75,60,0,0" VerticalAlignment="Top" Width="121" Click="ButtonStop_Click" IsEnabled="False" Grid.Column="2" ToolTip="Ukončí zvolenou funkci na vybraném portu."/>
 
-        <Frame x:Name="mainFrame" Content="" Margin="0,18,136,132" NavigationUIVisibility="Hidden" Grid.ColumnSpan="2"/>
-        <Menu VerticalAlignment = "Top" Grid.ColumnSpan="2" Height="18">
+        <Frame x:Name="mainFrame" Content="" Margin="0,18,136,52" NavigationUIVisibility="Hidden" Grid.ColumnSpan="3"/>
+        <Menu VerticalAlignment = "Top" Grid.ColumnSpan="3" Height="21" Margin="-5,0,-5,0">
             <MenuItem Header="Rozložení">
                 <MenuItem Header="Matice kanálů" Click="ChangeToTextBoxPage"/>
                 <MenuItem Header="Jednotlivý kanál" Click="ChangeToListBoxPage"/>
-                <MenuItem Header="Šavle"/>
+                <MenuItem Header="Posuvné potenciometry" IsEnabled="False"/>
+            </MenuItem>
+            <MenuItem Header="O Programu" Click="AboutShow">
+
+
             </MenuItem>
         </Menu>
-        <GroupBox Grid.Column="1" Header="Formátování" Margin="563,88,12,257">
+        <GroupBox Grid.Column="2" Header="Formátování" Margin="67,94,4,252">
             <StackPanel>
-                <RadioButton HorizontalAlignment="Left" x:Name="radioHex" Content="Hexadecimálně" IsChecked="True" Checked="RadioHex_Checked" Height="15" Width="100"/>
-                <RadioButton HorizontalAlignment="Left" x:Name="radioBin" Content="Binárně" Checked="radioBin_Checked" Height="15" Width="59"/>
-                <RadioButton HorizontalAlignment="Left" x:Name="radioDec" Content="Dekadicky" Checked="radioDec_Checked" Height="15" Width="73"/>
+                <RadioButton HorizontalAlignment="Left" x:Name="radioHex" Content="Hexadecimální" IsChecked="True" Checked="RadioHex_Checked" Height="15" Width="100"/>
+                <RadioButton HorizontalAlignment="Left" x:Name="radioBin" Content="Binární" Checked="radioBin_Checked" Height="15" Width="59"/>
+                <RadioButton HorizontalAlignment="Left" x:Name="radioDec" Content="Dekadické" Checked="radioDec_Checked" Height="15" Width="73"/>
             </StackPanel>
         </GroupBox>
-        <GroupBox Grid.Column="1" Header="Port:" Margin="563,160,12,171">
-            
-                <StackPanel Height="69">
-                   <!-- <Label Content="Port:" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="34"/>-->
-                <ComboBox Margin="0,2,0,0" HorizontalAlignment="Center" x:Name="portBox" Width="87" SelectionChanged="portBox_SelectionChanged" Height="22"/>
-                <Button Margin="0,10,0,0" HorizontalAlignment="Center" x:Name="refreshButton" Content="Obnovit" Width="92" Click="refreshButton_Click" Height="20" ToolTip="Znovu načte zařízení v seznamu portů."/>
-                </StackPanel>
-            
+        <GroupBox Grid.Column="2" Header="Port:" Margin="67,166,4,166">
+
+            <StackPanel Height="69">
+                <!-- <Label Content="Port:" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="34"/>-->
+                <ComboBox Margin="0,2,0,0" HorizontalAlignment="Center" x:Name="portBox" Width="105" SelectionChanged="portBox_SelectionChanged" Height="22" ToolTip="Umožňuje vybrat COM port analyzátoru, který bude používán."/>
+                <Button Margin="0,10,0,0" HorizontalAlignment="Center" x:Name="refreshButton" Content="Obnovit" Width="110" Click="refreshButton_Click" Height="20" ToolTip="Znovu načte zařízení v seznamu portů."/>
+            </StackPanel>
+
         </GroupBox>
-        <GroupBox Grid.Column="1" Header="Funkce" Margin="555,246,4,91">
+        <GroupBox Grid.Column="2" Header="Funkce" Margin="67,252,4,86">
             <StackPanel>
                 <RadioButton Margin="0,2,0,0" HorizontalAlignment="Left" x:Name="radioReceive" Content="Příjem signálu" IsChecked="True"  Height="15" Width="100" Checked="radioReceive_Checked"/>
                 <RadioButton  HorizontalAlignment="Left" x:Name="radioSend" Content="Odesílání signálu"  Height="15" Width="120" Checked="radioSend_Checked"/>
-            
-            <RadioButton HorizontalAlignment="Left" x:Name="radioEdit" Content="Editace signálu" Height="15" Width="100" IsEnabled="False"/>
+
+                <RadioButton HorizontalAlignment="Left" x:Name="radioEdit" Content="Editace signálu" Height="15" Width="100" IsEnabled="False"/>
             </StackPanel>
         </GroupBox>
+        <Label x:Name="lPacketsDropped" Grid.Column="2" Content="Porušených paketů: 0" HorizontalAlignment="Left" Margin="67,321,0,0" VerticalAlignment="Top" Width="154" Visibility="Hidden" ToolTip="Zobrazuje množství nerozpoznaných přijímaných paketů. Jeden nebo dva nepřijaté pakety po startu přijímání obvykle nejsou chybou."/>
 
     </Grid>
 </Window>
