--- a/DMX512_analyzator/TextBoxPage.xaml
+++ b/DMX512_analyzator/TextBoxPage.xaml
@@ -10,7 +10,7 @@
 
     <Grid x:Name="mainGrid" HorizontalAlignment="Left" Width="562">
         <Grid.RowDefinitions>
-            <RowDefinition Height="0"/>
+            <RowDefinition Height="10"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
@@ -19,7 +19,8 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
-            
+            <RowDefinition Height="60"/>
+
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5"/>
@@ -34,15 +35,16 @@
             <ColumnDefinition Width="60"/>
 
         </Grid.ColumnDefinitions>
-        <Label x:Name="l9" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40" Height="25" Grid.Row="2" Grid.Column="1" Content="9-16"/>
-        <Label x:Name="l17" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40" Height="25" Grid.Row="3" Grid.Column="1" Content="17-24"/>
-        <Label x:Name="l25" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40" Height="25" Grid.Row="4" Grid.Column="1" Content="25-32"/>
-        <Label x:Name="l33" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40" Height="25" Grid.Row="5" Grid.Column="1" Content="33-40"/>
-        <Label x:Name="l41" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40" Height="25" Grid.Row="6" Grid.Column="1" Content="41-48"/>
-        <Label x:Name="l49" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40" Height="25" Grid.Row="7" Grid.Column="1" Content="49-56"/>
-        <Label x:Name="l57" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40" Height="25" Grid.Row="8" Grid.Column="1" Content="57-64"/>
-        <TextBox x:Name="textBox0" HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="57" Height="22" TextChanged="text_changed" Grid.Row="1" Grid.Column="1" ToolTip="Start code - 0x00 pro ovládání scénické techniky"/>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="57" Height="22" TextChanged="text_changed" Grid.Row="1" Grid.Column="2"/>
+        <Label x:Name="l0" HorizontalAlignment="Right" VerticalAlignment="Center" Width="55" Height="25" Grid.Row="1" Grid.Column="1" Content=" 1-8" Margin="0,0,5,0" Visibility="Hidden" FontStyle="Italic"/>
+        <Label x:Name="l1" HorizontalAlignment="Right" VerticalAlignment="Top" Width="55" Height="25" Grid.Row="2" Grid.Column="1" Content=" 9-16" Margin="0,0,5,0" FontStyle="Italic"/>
+        <Label x:Name="l2" HorizontalAlignment="Right" VerticalAlignment="Top" Width="55" Height="25" Grid.Row="3" Grid.Column="1" Content="17-24" Margin="0,0,5,0" FontStyle="Italic"/>
+        <Label x:Name="l3" HorizontalAlignment="Right" VerticalAlignment="Top" Width="55" Height="25" Grid.Row="4" Grid.Column="1" Content="25-32" Margin="0,0,5,0" FontStyle="Italic"/>
+        <Label x:Name="l4" HorizontalAlignment="Right" VerticalAlignment="Top" Width="55" Height="25" Grid.Row="5" Grid.Column="1" Content="33-40" Margin="0,0,5,0" FontStyle="Italic"/>
+        <Label x:Name="l5" HorizontalAlignment="Right" VerticalAlignment="Top" Width="55" Height="25" Grid.Row="6" Grid.Column="1" Content="41-48" Margin="0,0,5,0" FontStyle="Italic"/>
+        <Label x:Name="l6" HorizontalAlignment="Right" VerticalAlignment="Top" Width="55" Height="25" Grid.Row="7" Grid.Column="1" Content="49-56" Margin="0,0,5,0" FontStyle="Italic"/>
+        <Label x:Name="l7" HorizontalAlignment="Right" VerticalAlignment="Top" Width="55" Height="25" Grid.Row="8" Grid.Column="1" Content="57-64" Margin="0,0,5,0" FontStyle="Italic"/>
+        <TextBox x:Name="textBox0" HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="57" Height="22" TextChanged="text_changed" Grid.Row="1" Grid.Column="1" ToolTip="Start code - 0x00 pro ovládání scénické techniky (0. byte)"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="57" Height="22" TextChanged="text_changed" Grid.Row="1" Grid.Column="2" ToolTip="1. byte"/>
         <TextBox x:Name="textBox2" HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="57" Height="22" TextChanged="text_changed" Grid.Row="1" Grid.Column="3"/>
         <TextBox x:Name="textBox3" HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="57" Height="22" TextChanged="text_changed" Grid.Row="1" Grid.Column="4"/>
         <TextBox x:Name="textBox4" HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="57" Height="22" TextChanged="text_changed" Grid.Row="1" Grid.Column="5"/>
@@ -106,7 +108,10 @@
         <TextBox x:Name="textBox62" HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="57" Height="22" TextChanged="text_changed" Grid.Row="8" Grid.Column="7"/>
         <TextBox x:Name="textBox63" HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="57" Height="22" TextChanged="text_changed" Grid.Row="8" Grid.Column="8"/>
         <TextBox x:Name="textBox64" HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="57" Height="22" TextChanged="text_changed" Grid.Row="8" Grid.Column="9"/>
-
+        <Button x:Name="BackButton" Content="← Zpět" HorizontalAlignment="Center" Margin="0,15,0,0" VerticalAlignment="Top" Width="60" Height="20" Grid.Column="4" Grid.Row="9" IsEnabled="False" Click="BackButton_Click"/>
+        <WrapPanel Grid.Column="1"/>
+        <Button x:Name="ForwardButton" Content="Další →" HorizontalAlignment="Center" Margin="0,15,0,0" VerticalAlignment="Top" Width="60" Height="20" Grid.Column="6" Grid.Row="9" Click="ForwardButton_Click"/>
+        <Label x:Name="pageNumber" HorizontalAlignment="Center" VerticalAlignment="Top" Width="29" Height="26" Grid.Row="9" Grid.Column="5" Content="1/8" Margin="0,12,0,0" />
 
 
     </Grid>
